MDEV-18907 Slow log: RENAME TABLE is not "admin", while ALTER TABLE..RENAME is